--- a/gb/17/10/24/n9766851.md
+++ b/gb/17/10/24/n9766851.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ferqxx327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ferqxx327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ferqxx327/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ferqxx327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ferqxx327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ferqxx327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ferqxx327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>流浪汉花光所有积蓄找狗狗 重逢场面催人泪下</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/10/sssss6.43-600x400.jpg" />
 <h6>狗狗、街友示意图。（pixabay）
 </h6>
 <hr>
-	<p>【大纪元2017年10月25日讯】今年8月份一个星期五的早晨，在美国乔治亚州一间动物庇护所的门口，工作人员发现有一名<ahref="https://github.com/ferqxx327/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E6%B1%89.md#1">流浪汉</a>躺在地上。原本以为他只是单纯地睡在这里，但询问过才知道，这位流浪汉是特地来寻找他的<ahref="https://github.com/ferqxx327/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>的，他已经在这里等了一个晚上。<ahref="https://github.com/ferqxx327/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E6%B1%89.md#1">流浪汉</a>与他的狗狗最终得以重逢的一幕也感动了在场的所有人！</p>
+	<p>【大纪元2017年10月25日讯】今年8月份一个星期五的早晨，在美国乔治亚州一间动物庇护所的门口，工作人员发现有一名<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E6%B1%89.md#1">流浪汉</a>躺在地上。原本以为他只是单纯地睡在这里，但询问过才知道，这位流浪汉是特地来寻找他的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>的，他已经在这里等了一个晚上。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E6%B1%89.md#1">流浪汉</a>与他的狗狗最终得以重逢的一幕也感动了在场的所有人！</p>
 <p>迪尔卡布县（DeKalb）的动物庇护所在周五早上开门的时候，看到的正是这样一副场景。</p>
-<p><center><a style="border: none; overflow: hidden;" src=></a><img width="600" src="https://raw.githubusercontent.com/ferqxx327/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D1869642429719401%26set%3Da.437730356243956.122689.100000209877098%26type%3D3&amp;width=450&amp;show_text=false&amp;appId=805152316326190&amp;height=497" width="450" b="497" frameborder="0" scrolling="no"></a></center>&nbsp;</p>
-<p>据庇护所的发言人卡连（Karen Hirsch）描述：“我们立刻唤醒了他，那位流浪汉说，他的<ahref="https://github.com/ferqxx327/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>失踪了，他是特地前来寻找自己的狗狗的。”</p>
+<p><center><a style="border: none; overflow: hidden;" src=></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/O3redpTFa"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D1869642429719401%26set%3Da.437730356243956.122689.100000209877098%26type%3D3&amp;width=450&amp;show_text=false&amp;appId=805152316326190&amp;height=497" width="450" b="497" frameborder="0" scrolling="no"></a></center>&nbsp;</p>
+<p>据庇护所的发言人卡连（Karen Hirsch）描述：“我们立刻唤醒了他，那位流浪汉说，他的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>失踪了，他是特地前来寻找自己的狗狗的。”</p>
 <p>流浪汉看起来疲倦不堪，他的狗狗被人抱走后就失踪了，听说被送到了这家动物庇护所，所以他特地从很远的地方赶来。</p>
 <p>虽然机构记录显示，他的狗狗的确在两周前被送到过庇护所，但现在已经被移往另外的服务处。</p>
 <p>流浪汉听了显得很无助，为了来到这儿，他已经花光了身上所有的钱。</p>
@@ -29,53 +29,50 @@
 <p>约翰笔下的乔治非常受人喜爱，看过他作品的画廊老板查理．格里芬（Charlie Griffin）表示：“他的作品与现实连结，有生命在里面，因为它背后有一个真实的故事，非常鼓舞人心。从这些作品中流露出的情感，你可以看到”。这位查理成了约翰的伯乐，他帮助约翰策办画展，还出了一本关于约翰和乔治的书，书名就叫“约翰和乔治：一只狗救回我的人生”(John and George &#8211; the Dog who Saved my Life)。</p>
 <p>在举办第一个个人展览后，约翰一炮而红。不过现在约翰还是会坐在索迪治（Shoreditch）与伦敦的街头画画，约翰表示：“ 只要我出门去画画，我都会带着乔治。在这里很好，因为每个人都认识它，它已经成为索迪治的标志与传奇，我现在很确定，它以后也会变成伦敦的标志”。</p>
 <p>天无绝人之路，美好的故事每天都在上演。</p>
-<p><center><a src=></a><img width="600" src="https://raw.githubusercontent.com/ferqxx327/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F507173809630279&amp;width=600&amp;show_text=false&amp;height=497&amp;appId" width="600" b="497"></a></center><center><a src=></a><img width="600" src="https://raw.githubusercontent.com/ferqxx327/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F431983450482649&amp;width=600&amp;show_text=false&amp;height=764&amp;appId" width="600" b="764"></a></center><center><a src=></a><img width="600" src="https://raw.githubusercontent.com/ferqxx327/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F430576937289967&amp;width=600&amp;show_text=false&amp;height=498&amp;appId" width="600" b="498"></a></center>&nbsp;</p>
-<p><center><a src=""></a><a href="https://git.io/JtEmy"><img width="600" src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/wnr-zMYmz9U" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>责任编辑：轩匀</p>
+<p><center><a src=></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/O3redpTFa"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F507173809630279&amp;width=600&amp;show_text=false&amp;height=497&amp;appId" width="600" b="497"></a></center><center><a src=></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/O3redpTFa"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F431983450482649&amp;width=600&amp;show_text=false&amp;height=764&amp;appId" width="600" b="764"></a></center><center><a src=></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/O3redpTFa"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohn.dolan.9400984%2Fposts%2F430576937289967&amp;width=600&amp;show_text=false&amp;height=498&amp;appId" width="600" b="498"></a></center>&nbsp;</p>
+<p><center><a src=""></a><a href="https://d23a1u4ljgwmvy.cloudfront.net/O3redpTFa"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/wnr-zMYmz9U" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>责任编辑：轩匀</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/6/12/13/n1555169.md#1">陈毓襄将成乐圣嫡传弟子</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/10/5/28/n2921157.md#1">钢琴家陈毓襄返福星母校   教学获热烈回响</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/10/7/19/n2970597.md#1">打禅练气功    陈毓襄琴艺出神入化</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/11/12/19/n3461727.md#1">华人三杰　诠释贝多芬协奏曲</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/15/6/25/n4465430.md#1">钢琴家陈毓襄专访：挑战不可能</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/2/n12727122.md#1">卡城住宅道路时速将降至40km/h</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/30/n12722080.md#1">Enmax公司裁170个岗位</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/27/n12714443.md#1">卡城制加拿大疫苗 临床试验已开始</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/25/n12711740.md#1">卡城男子隔离酒店体验</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/23/n12706446.md#1">卡城议员伍利不再寻求连任</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878233.md#1">“神韵是最精彩的！感觉是神话般的演出”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878438.md#1">“演出在讲故事，这是一种文化的复活”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878454.md#1">高级工程师： 神韵舞蹈紧紧‘摄’住观众身心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878889.md#1">设计师：神韵让我看到了复兴和希望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/7/n8885102.md#1">公司老板：祝神韵继续取得成功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/28/n10000152.md#1">神韵歌词蕴含智慧 电信建筑师受益匪浅</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992445.md#1" target="_blank">（储安平之子）储望华：沉重的回忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12723329.md#1">【新闻看点】北京天骄被制裁 中国航飞或遭重创</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/1/n12725897.md#1">【新闻大家谈】缅甸军方政变 拜登如何应对</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/2/n12727154.md#1">【拍案惊奇】缅甸政变拜登震惊 左媒称低估川普</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12723240.md#1">习近平快速处决政敌白手套赖小民内幕</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12724229.md#1">专家示警：若爆发立百病毒疫情 致死达75%</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12723993.md#1">世卫专家查华南海鲜市场 武汉市民怎么说</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12724209.md#1">李英爱迎来50岁生日 保养六法维持冻龄美貌</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/30/n12723159.md#1">周迅离婚后亮相节目 鼻梁受伤真相笑翻全场</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12724329.md#1">疫情期间团购被骗 台亲共艺人踢爆大陆假食品</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12723670.md#1">阿根廷8旬老妇“病逝” 火化前一刻活了过来</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/1/n12724829.md#1">乌克兰网红每天穿19世纪服装 如古典美人</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/30/n12722965.md#1">家里多于3人 病毒传播风险超50% 3招防家庭传染</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/1/31/n12723516.md#1">美国华盛顿特区哪里不一样？ CIA考考你</a></li>
-<li><a href="https://github.com/ferqxx327/djy/blob/master/gb/21/2/1/n12725456.md#1">时隔130年 美丽的雪鸮再现纽约中央公园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ferqxx327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/24/n9766851.htm">流浪汉花光所有积蓄找狗狗 重逢场面催人泪下</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/24/n9766851.htm">流浪汉花光所有积蓄找狗狗 重逢场面催人泪下</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ferqxx327/djy/blob/master/gb/17/10/24/n9766851.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ferqxx327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ferqxx327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ferqxx327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ferqxx327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ferqxx327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/10/24/n9766851.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
